src/objects/geopointe__GP_Route_Plan__c.object
<CustomObject>
    <fields>
        <fullName>geopointe__Breaks__c</fullName>
        <inlineHelpText>Use JSON and 24-hour format: {&quot;Mon&quot;:(&quot;08:00&quot;,&quot;17:30&quot;),&quot;Tue&quot;:(&quot;07:30&quot;,&quot;13:00&quot;)}</inlineHelpText>
        <label>Breaks</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Create_Routes__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Create Geopointe Routes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>geopointe__Different_Start_Locations__c</fullName>
        <label>Different Start Locations</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>geopointe__End_Address__c</fullName>
        <label>End Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__End_Location__c</fullName>
        <label>End Location</label>
        <scale>7</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>geopointe__Job_First_Date__c</fullName>
        <inlineHelpText>This field should not be modified by users.</inlineHelpText>
        <label>Job First Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>geopointe__Job_Started_Date__c</fullName>
        <inlineHelpText>This field should not be modified by users.</inlineHelpText>
        <label>Job Started Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>geopointe__Job_Status__c</fullName>
        <inlineHelpText>This field should not be modified by users.</inlineHelpText>
        <label>Job Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Job_Summary__c</fullName>
        <inlineHelpText>This field should not be modified by users.</inlineHelpText>
        <label>Job Summary</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>geopointe__Last_Run_Date__c</fullName>
        <inlineHelpText>When the plan was last run. This field should not be modified by users.</inlineHelpText>
        <label>Last Run Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>geopointe__Pending_Delete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pending Delete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>geopointe__RPC_Business_End_Of_Day__c</fullName>
        <formula>geopointe__Route_Plan_Configuration__r.geopointe__End_Of_Day__c</formula>
        <label>Business Close Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__RPC_Business_End_Of_Lunch__c</fullName>
        <formula>geopointe__Route_Plan_Configuration__r.geopointe__End_Of_Lunch__c</formula>
        <label>Business Lunch End Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__RPC_Business_Start_Of_Day__c</fullName>
        <formula>geopointe__Route_Plan_Configuration__r.geopointe__Start_Of_Day__c</formula>
        <label>Business Open Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__RPC_Business_Start_Of_Lunch__c</fullName>
        <formula>geopointe__Route_Plan_Configuration__r.geopointe__Start_Of_Lunch__c</formula>
        <label>Business Lunch Start Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__RPC_Completed_Child_Relationship_Name__c</fullName>
        <formula>geopointe__Route_Plan_Configuration__r.geopointe__Completed_Child_Relationship_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Completed Child Relationship Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__RPC_Completed_Filter_Logic__c</fullName>
        <description>Stores the AND/OR filter logic for queries, eg: 1 AND (2 OR 3)</description>
        <formula>geopointe__Route_Plan_Configuration__r.geopointe__Completed_Filter_Logic__c</formula>
        <label>Completed Filter Logic</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__RPC_Completed_Filters__c</fullName>
        <label>Completed Filters</label>
        <length>16384</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>geopointe__RPC_Completed_When_Field__c</fullName>
        <formula>geopointe__Route_Plan_Configuration__r.geopointe__Completed_When_Field__c</formula>
        <inlineHelpText>Name of lookup field to when the visit occurred</inlineHelpText>
        <label>Completed When Field</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__RPC_Completed_Who_Field__c</fullName>
        <formula>geopointe__Route_Plan_Configuration__r.geopointe__Completed_Who_Field__c</formula>
        <inlineHelpText>Name of lookup field to who visited the location</inlineHelpText>
        <label>Completed Who Field</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__RPC_Create_Routes__c</fullName>
        <formula>TEXT(geopointe__Route_Plan_Configuration__r.geopointe__Create_Routes__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Create Geopointe Routes</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__RPC_End_Date__c</fullName>
        <formula>geopointe__Route_Plan_Configuration__r.geopointe__End_Date__c</formula>
        <label>Plan End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>geopointe__RPC_End_Of_Day__c</fullName>
        <label>Business Close Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__RPC_End_Of_Lunch__c</fullName>
        <label>Business Lunch End Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__RPC_Freq_Num_Time_Units__c</fullName>
        <formula>geopointe__Route_Plan_Configuration__r.geopointe__Freq_Num_Time_Units__c</formula>
        <label>Target Frequency - # Time Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>geopointe__RPC_Freq_Num_Visits_Field__c</fullName>
        <formula>geopointe__Route_Plan_Configuration__r.geopointe__Freq_Num_Visits_Field__c</formula>
        <inlineHelpText>Field used to override the number of visits per period.</inlineHelpText>
        <label>Target Frequency Visits Field</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__RPC_Freq_Num_Visits__c</fullName>
        <formula>geopointe__Route_Plan_Configuration__r.geopointe__Freq_Num_Visits__c</formula>
        <label>Target Frequency - # Visits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>geopointe__RPC_Freq_Time_Unit__c</fullName>
        <formula>TEXT( geopointe__Route_Plan_Configuration__r.geopointe__Freq_Time_Unit__c )</formula>
        <label>Target Frequency - Time Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__RPC_Include_Poor_Quality_Geocodes__c</fullName>
        <formula>geopointe__Route_Plan_Configuration__r.geopointe__Include_Poor_Quality_Geocodes__c</formula>
        <label>Include Poor Quality Geocodes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>geopointe__RPC_Location_Filter_Logic__c</fullName>
        <description>Stores the AND/OR filter logic for queries, eg: 1 AND (2 OR 3)</description>
        <formula>geopointe__Route_Plan_Configuration__r.geopointe__Location_Filter_Logic__c</formula>
        <label>Location Filter Logic</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__RPC_Location_Filters__c</fullName>
        <description>Holds configuration for filters for Data Sets.</description>
        <label>Location Filters</label>
        <length>16384</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>geopointe__RPC_Map_Object_User_Field__c</fullName>
        <formula>geopointe__Route_Plan_Configuration__r.geopointe__Map_Object_User_Field__c</formula>
        <inlineHelpText>The API name of the map object User Field this Route Plan uses.</inlineHelpText>
        <label>Map Object User Field</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__RPC_Map_Object__c</fullName>
        <formula>geopointe__Route_Plan_Configuration__r.geopointe__Map_Object__c</formula>
        <inlineHelpText>The API name of the map object this Route Plan uses.</inlineHelpText>
        <label>Map Object</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__RPC_Scheduled_Additional_Fields__c</fullName>
        <inlineHelpText>Additional fields to set and their values</inlineHelpText>
        <label>Scheduled Additional Fields</label>
        <length>16384</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>geopointe__RPC_Scheduled_Child_Relationship_Name__c</fullName>
        <formula>geopointe__Route_Plan_Configuration__r.geopointe__Scheduled_Child_Relationship_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scheduled Child Relationship Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__RPC_Scheduled_End_Field__c</fullName>
        <formula>geopointe__Route_Plan_Configuration__r.geopointe__Scheduled_End_Field__c</formula>
        <inlineHelpText>Name of datetime field in which to save the visit end time</inlineHelpText>
        <label>Scheduled End Field</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__RPC_Scheduled_Name__c</fullName>
        <formula>geopointe__Route_Plan_Configuration__r.geopointe__Scheduled_Name__c</formula>
        <inlineHelpText>What to name the scheduled visit records</inlineHelpText>
        <label>Scheduled Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__RPC_Scheduled_Route_Plan_Field__c</fullName>
        <formula>geopointe__Route_Plan_Configuration__r.geopointe__Scheduled_Route_Plan_Field__c</formula>
        <inlineHelpText>Name of Route Plan lookup field</inlineHelpText>
        <label>Scheduled Route Plan Field</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__RPC_Scheduled_Start_Field__c</fullName>
        <formula>geopointe__Route_Plan_Configuration__r.geopointe__Scheduled_Start_Field__c</formula>
        <inlineHelpText>Name of datetime field in which to save the visit start time</inlineHelpText>
        <label>Scheduled Start Field</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__RPC_Scheduled_When_Field__c</fullName>
        <formula>geopointe__Route_Plan_Configuration__r.geopointe__Scheduled_When_Field__c</formula>
        <inlineHelpText>Name of date field in which to save the date of the visit</inlineHelpText>
        <label>Scheduled When Field</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__RPC_Scheduled_Who_Field__c</fullName>
        <formula>geopointe__Route_Plan_Configuration__r.geopointe__Scheduled_Who_Field__c</formula>
        <inlineHelpText>Name of User lookup field in which to save who is doing the visit</inlineHelpText>
        <label>Scheduled Who Field</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__RPC_Start_Date__c</fullName>
        <formula>geopointe__Route_Plan_Configuration__r.geopointe__Start_Date__c</formula>
        <label>Plan Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>geopointe__RPC_Start_Of_Day__c</fullName>
        <label>Business Open Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__RPC_Start_Of_Lunch__c</fullName>
        <label>Business Lunch Start Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__RPC_Status__c</fullName>
        <formula>TEXT(geopointe__Route_Plan_Configuration__r.geopointe__Status__c)</formula>
        <label>Plan Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__RPC_Use_Business_Hours__c</fullName>
        <formula>geopointe__Route_Plan_Configuration__r.geopointe__Use_Location_Visit_Hours__c</formula>
        <label>Use Location Visit Hours</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>geopointe__RPC_Use_Location_Visit_Hours__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Location Visit Hours</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>geopointe__RPC_Visit_Buffer__c</fullName>
        <formula>geopointe__Route_Plan_Configuration__r.geopointe__Visit_Buffer__c</formula>
        <label>Visit Buffer (min)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>geopointe__RPC_Visit_Duration_Field__c</fullName>
        <formula>geopointe__Route_Plan_Configuration__r.geopointe__Visit_Duration_Field__c</formula>
        <inlineHelpText>Name of field to use to override Visit Duration</inlineHelpText>
        <label>Visit Duration Field</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__RPC_Visit_Duration__c</fullName>
        <formula>geopointe__Route_Plan_Configuration__r.geopointe__Visit_Duration__c</formula>
        <label>Visit Duration (min)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>geopointe__RPC_Visiting_Hours__c</fullName>
        <formula>geopointe__Route_Plan_Configuration__r.geopointe__Visiting_Hours__c</formula>
        <inlineHelpText>Defines the days and hours during which visits can be made. Use JSON and 24-hour format: {&quot;Mon&quot;:(&quot;08:00&quot;,&quot;17:30&quot;),&quot;Tue&quot;:(&quot;07:30&quot;,&quot;13:00&quot;)}</inlineHelpText>
        <label>Visiting Hours</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Records_With_Incorrect_Business_Hours__c</fullName>
        <label>Records With Incorrect Business Hours</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>geopointe__Records_With_Incorrect_Hours__c</fullName>
        <label>Records With Incorrect Business Hours</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Route_Plan_Configuration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Geopointe Route Plan Configuration</label>
        <referenceTo>geopointe__GP_Route_Plan_Configuration__c</referenceTo>
        <relationshipName>Route_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>geopointe__Route_Plan_Name__c</fullName>
        <formula>geopointe__Route_Plan_Configuration__r.Name &amp; &apos; - &apos; &amp; Owner:User.FirstName &amp; &apos; &apos; &amp; Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Route Plan Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Start_Address__c</fullName>
        <label>Start Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Start_Location__c</fullName>
        <label>Start Location</label>
        <scale>7</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>geopointe__Work_Hours__c</fullName>
        <inlineHelpText>Defines the working days and hours. Use JSON and 24-hour format: {&quot;Mon&quot;:(&quot;08:00&quot;,&quot;17:30&quot;),&quot;Tue&quot;:(&quot;07:30&quot;,&quot;13:00&quot;)}</inlineHelpText>
        <label>Work Hours</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Geopointe Route Plan</label>
    <listViews>
        <fullName>geopointe__All</fullName>
        <columns>NAME</columns>
        <columns>geopointe__Route_Plan_Name__c</columns>
        <columns>geopointe__Start_Address__c</columns>
        <columns>geopointe__End_Address__c</columns>
        <columns>geopointe__RPC_Start_Date__c</columns>
        <columns>geopointe__RPC_End_Date__c</columns>
        <columns>geopointe__RPC_Status__c</columns>
        <columns>geopointe__Last_Run_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RP-{0}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Geopointe Route Plans</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>